--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Page Title</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Quiz</title>
+		<link rel=¨stylesheet¨ type=¨text/css¨ href=¨index.css¨>
 	</head>
 	<body>
 		<div id="main">
@@ -48,5 +50,6 @@
 				<div id='questions'></div>
                 <marquee direction="left">&#128157; Created By Tariel Duishvili</marquee>
 				<script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+		                <script src="index.js"></script>
 			</body>
 		</html>
