--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Quiz</title>
-		<link rel=¨stylesheet¨ type=¨text/css¨ href=¨index.css¨>
+		<link rel="stylesheet" type="text/css" href="index.css">
 	</head>
 	<body>
 		<div id="main">
